--- a/arena/arena.vcxproj
+++ b/arena/arena.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="draw.hpp" />
     <ClInclude Include="menu.hpp" />
+    <ClInclude Include="option_menu.hpp" />
     <ClInclude Include="player.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -155,6 +156,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="menu.cpp" />
+    <ClCompile Include="option_menu.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
